--- a/files/pages/personal/personal.wxml
+++ b/files/pages/personal/personal.wxml
@@ -2,40 +2,44 @@
 <import src="../../src/wetoast.wxml"/>
 <view class="item-cells">
   <view class="item-cell item-cell-access"  hover-class="weui-cell_active"  bindtap="bindName">
-  <image class="icon" src="/images/account.png" />
+   <icon class="icon iconfont icon-xingming"/>
     <view class="item-cell-bd">
-      <text class="detail-text">吴欣阳</text>
+      <text class="detail-text">姓名</text>
     </view>
+     <view class="message"></view>
     <view class="item-cell-ft"></view>
   </view>
 </view>
 
 <view class="item-cells">
   <view class="item-cell item-cell-access"  hover-class="weui-cell_active"  bindtap="bindName">
-  <image class="icon" src="/images/code.png" />
+  <icon class="icon iconfont icon-wxbzhanghu"/>
     <view class="item-cell-bd">
-      <text class="detail-text">12311110327</text>
+      <text class="detail-text">学号</text>
     </view>
+     <view class="message"></view>
     <view class="item-cell-ft"></view>
   </view>
 </view>
 
 <view class="item-cells">
   <view class="item-cell item-cell-access"  hover-class="weui-cell_active"  bindtap="bindName">
-  <image class="icon" src="/images/sex.png" />
+ <icon class="icon iconfont.icon-xingbie"/>
     <view class="item-cell-bd">
-      <text class="detail-text">男</text>
+      <text class="detail-text">性别</text>
     </view>
+     <view class="message"></view>
     <view class="item-cell-ft"></view>
   </view>
 </view>
 
 <view class="item-cells">
   <view class="item-cell item-cell-access"  hover-class="weui-cell_active"  bindtap="bindName">
-  <image class="icon" src="/images/phone.png" />
+ <icon class="icon iconfont.icon-weibiaoti-"/>
     <view class="item-cell-bd">
-      <text class="detail-text">13683435609</text>
+      <text class="detail-text">联系方式</text>
     </view>
+    <view class="message"></view>
     <view class="item-cell-ft"></view>
   </view>
 </view>
