--- a/files/pages/position-detail/position-detail.wxml
+++ b/files/pages/position-detail/position-detail.wxml
@@ -9,11 +9,13 @@
 	      <view class="company">
 			  <view class="_oneptit_time">
 				   <view class="ptit_time_Ont">
-					  <image class="company_one" src="../../images/site.png"></image>
+				 <icon class=" iconfont icon-didian" />
 					  <text>必胜客（都江堰点）</text>
 				   </view>
 				  <view class="ptit_time">
-					  <view><image class="company_one" src="../../images/opone.png"></image></view>
+					  <view>
+             <icon class="icon-phone iconfont icon-weibiaoti-" />
+            </view>
 					  <view> 咨询热线:028-2485555</view>
 				  </view>
 			  </view>
@@ -58,5 +60,5 @@
  <view class="button-t" style="width: 100%;">
 		<image src="../../images/dist/tc.png"></image>
 		<view class="collect">收藏</view>
-		<button>立即报名</button>
+		<button bindtap="sign">立即报名</button>
 </view>
