--- a/files/pages/travel-detail/travel-detail.wxml
+++ b/files/pages/travel-detail/travel-detail.wxml
@@ -8,11 +8,13 @@
 	      <view class="company">
 			  <view class="_oneptit_time">
 				   <view class="ptit_time_Ont">
-					  <image class="company_one" src="../../images/site.png"></image>
+					     <icon class=" iconfont icon-didian" />
 					  <text>必胜客（都江堰点）</text>
 				   </view>
 				  <view class="ptit_time">
-					  <view><image class="company_one" src="../../images/opone.png"></image></view>
+					  <view>
+             <icon class="icon-phone iconfont icon-weibiaoti-" />
+            </view>
 					  <view> 咨询热线:028-2485555</view>
 				  </view>
 				  <view class="resource">
@@ -29,6 +31,7 @@
 	          <text class="secondary-list">随时发团</text>
 	          <text class="date">发布时间:2019-10-15</text>
 	      </view>
+
 	      </view>
 	  </view>
 	  <view class="introduce">
@@ -90,5 +93,5 @@
   <view class="button-t" style="width: 100%;">
 	  		<image src="../../images/dist/tc.png"></image>
 	  		<view class="collect">收藏</view>
-	  		<button>立即预定</button>
+	  		<button bindtap="reservation">立即预定</button>
 </view>
