--- a/files/pages/personal/personal.wxss
+++ b/files/pages/personal/personal.wxss
@@ -42,7 +42,11 @@ page{
 .icon{
   width:20px;
   height: 20px; 
-  margin-top: 5rpx;
+  margin-top: -5rpx;
+}
+.message{
+  color: #A8A8A8;
+  margin-right:40rpx; 
 }
 .detail-text{
   margin-left:15rpx; 
