--- a/files/pages/position-detail/position-detail.wxml
+++ b/files/pages/position-detail/position-detail.wxml
@@ -9,24 +9,21 @@
 	      <view class="company">
 			  <view class="_oneptit_time">
 				   <view class="ptit_time_Ont">
-<<<<<<< HEAD
 					  <image class="company_one" src="../../images/site.png"></image>
 					  <text>{{detali.part_time_shop_address}}</text>
 				   </view>
 				  <view class="ptit_time">
 					  <view><image class="company_one" src="../../images/opone.png"></image></view>
-					  <view> 咨询热线:{{detali.part_time_phone}}</view>
-=======
-				 <icon class=" iconfont icon-didian" />
-					  <text>必胜客（都江堰点）</text>
-				   </view>
-				  <view class="ptit_time">
-					  <view>
-             <icon class="icon-phone iconfont icon-weibiaoti-" />
-            </view>
-					  <view> 咨询热线:028-2485555</view>
->>>>>>> b32f1cd317fd7090d1acf1dc8a002f73945654fc
+					  <view> 咨询热线:{{detali.part_time_phone}}</view>	`
+					<icon class=" iconfont icon-didian" />
+					 <text>必胜客（都江堰点）</text>
 				  </view>
+				  <view class="ptit_time">
+				<view>
+				<icon class="icon-phone iconfont icon-weibiaoti-" /> 
+				</view>
+					  <view> 咨询热线:{{detali.part_time_phone}}</view>
+				</view>
 			  </view>
 			  <view>
 				<image class="company_img" src="../../images/dist/jsb.png"></image>
