--- a/files/pages/position-detail/position-detail.wxml
+++ b/files/pages/position-detail/position-detail.wxml
@@ -1,4 +1,5 @@
 <!--pages/position-detail/position-detail.wxml-->
+<import src="../../src/wetoast.wxml" />
 <view class="ptit-list">
 	<view class="item">
 	      <view class="item-main">
@@ -53,3 +54,5 @@
 		<view class="collect">收藏</view>
 		<button bindtap="sign">立即报名</button>
 </view>
+<!--提示-->
+<template is="wetoast" data="{{...__wetoast__}}" />
