--- a/files/pages/sign/sign.wxml
+++ b/files/pages/sign/sign.wxml
@@ -1,22 +1,28 @@
-  <scroll-view scroll-y style="height: {{viewHeigh}}px;" bindscrolltolower="lower">
-    <view class="ptit-list"  wx:for="{{formation}}" >
+<scroll-view scroll-y style="height: {{viewHeigh}}px;" bindscrolltolower="lower">
+  <view class="container" wx:if="{{flag == false}}">
+   <image src="../../images/error.png"></image>
+   <view class="no-msg">暂无信息</view>
+  </view>
+  <view wx:else>
+    <view class="ptit-list" wx:for="{{sign}}">
       <view class="item">
-            <view class="item-main">
-            <view class="job">
-                <text class="job-position" data-id="{{id}}">{{item.part_time_name}}</text>
-                <text class="job-Salary">报名中</text>
-            </view>
-            <view class="company">
-	          <icon class=" iconfont icon-didian" />
-                <text class="address">{{item.part_time_shop_address}}</text>
-            </view>
-            <view class="secondary">
-              <icon class="icon-phone iconfont icon-weibiaoti-" />
-                <text class="phone">028-52125475</text>
-                <text class="date">报名时间：{{item.part_time_time}}</text>
-            </view>
-            </view>
+        <view class="item-main">
+          <view class="job">
+            <text class="job-position" data-id="{{id}}">{{item.part_time_name}}</text>
+            <text class="job-Salary">已报名</text>
+          </view>
+          <view class="company">
+            <icon class=" iconfont icon-didian" />
+            <text class="address">{{item.part_time_shop_address}}</text>
+          </view>
+          <view class="secondary">
+            <icon class="icon-phone iconfont icon-weibiaoti-" />
+            <text class="phone">联系电话：{{item.part_time_phone}}</text>
+            <text class="date">报名时间：{{item.job_collectreg_time}}</text>
+          </view>
         </view>
-	 </view>
+      </view>
+    </view>
     <view class="loading" hidden="{{loadingHidden}}">{{loadingText}}</view>
-  </scroll-view>
+  </view>
+</scroll-view>
