--- a/files/pages/position-detail/position-detail.wxss
+++ b/files/pages/position-detail/position-detail.wxss
@@ -11,8 +11,8 @@
 }
 .company text{ 
 	width: 50%;
-	margin-left: 2%;
-	color: #adadad;
+	/* margin-left: 2%;
+	color: #adadad; */
 }
 .ptit-list{      
 	width: 90%;      
