--- a/files/pages/rookie/rookie.wxss
+++ b/files/pages/rookie/rookie.wxss
@@ -4,6 +4,7 @@
 	height: 30rpx;
 }
 .company text{
+	width: 55%;
 	margin-left: 2%;
 	color: #adadad;
 }
@@ -20,7 +21,7 @@
     display: flex;   
     width: 100%;
      background-color: #fff; 
-  }
+  }        
   .item-img {
     padding: 32rpx 28rpx; 
   }  
