--- a/files/pages/travel-detail/travel-detail.wxml
+++ b/files/pages/travel-detail/travel-detail.wxml
@@ -39,14 +39,14 @@
 		  <text>景区介绍</text>
 	  </view>
 	  <view class="introduces">
-	  		  <image src="{{detalis.tour_pic_one}}"></image>
+	  		<!--  <image src="{{detalis.tour_pic_one}}"></image> -->
 	  		  <text>【青城山景区】世界文化遗产、全 国重点文物保护单位,国家AAAAA 级旅游景区、全球道教天师道圣地， 中国四大道教名山之一，五大仙山之一，中国道教的发祥地之一，森林覆盖率%90以上，人杰地灵，风景优美享有 青城天下幽，的美誉
 			 </text>
 	  </view>
 	  <view class="introduces_img">
-		  <image src="../../images/tratvl/zuone.jpg"></image>
-		  <image src="../../images/tratvl/zuone.jpg"></image>
-		  <image src="../../images/tratvl/zutwo.jpg"></image>
+		  <image src="{{detalis.tour_pic_two}}"></image>
+		  <image src="{{detalis.tour_pic_three}}"></image>
+		  <image src="{{detalis.tour_pic_four}}"></image>
 	  </view>
 	  <view class="introduce">
 	  		  <image src="../../images/dist/blue.png"></image>
@@ -80,13 +80,20 @@
 	  </view>
 	  <!-- 工作要求 -->
 	  <view>
-	  		  <view class="require_content">【行程时间】 正常发团时间早上8点半左右，回程时  间预计下午5点半左右。预定成功后100%发团。   </view>
-			  <view class="require_content">【集合地点】 都江堰市客运中心停车场。都江堰市区 内免费接人，也可自行前往集结地。</view>
-	  		  <view class="require_content">【行程包含】 青城山景区门票、索道门票、景区观光 车门票往返正规旅游车、午餐（特色川菜）、全程    优秀导游服务、旅游意</view>
-	  		  <view class="require_content">【行程路线】 早上8:30左右都江堰客运中心集合出发   →9:30左右到达青城山景区停车场 →乘坐景区观光   车前往景区大门早上8:30左右都江堰客运中心集合出发   →9:30左右到达青城山景区停车场 →乘坐景区观光   车前往景区大门</view>
-	  		  <view class="require_content">【温馨提示】 预定成功后，请保持手机畅通，旅行社    将在出发前一天晚上（19:00-20:00）与您取得联系，沟通行程相关事宜</view>
-			  <view class="require_content">【郑重承诺】 全程无强制消费、无购物店。</view>
-			  <view class="require_content">【商家联系方式】 15582825241 申女士  </view>
+	  		  <view class="require_content">【行程时间】</view>
+			  <view class="require_cont">{{detalis.tour_trip_timetext}}</view>
+			  <view class="require_content">【集合地点】 </view>
+			  <view class="require_cont">{{detalis.tour_trip_venue}}</view>
+	  		  <view class="require_content">【行程包含】</view>
+			  <view class="require_cont">{{detalis.tour_trip_contain}}</view>
+	  		  <view class="require_content">【行程路线】</view>
+			  <view class="require_cont">{{detalis.tour_trip_route}}</view>
+	  		  <view class="require_content">【温馨提示】</view>
+			  <view class="require_cont">{{detalis.tour_trip_tips}}</view>
+			  <view class="require_content">【郑重承诺】</view>
+			  <view class="require_cont">{{detalis.tour_trip_promise}}</view>
+			  <view class="require_content">【商家联系方式】</view>
+			  <view class="require_cont">{{detalis.tour_trip_phone}}</view>
 	  </view>
 </view>
 <view style="height:10vh;"></view>
