--- a/files/pages/login/login.wxml
+++ b/files/pages/login/login.wxml
@@ -1,12 +1,12 @@
 <!--pages/login/login.wxml-->
 
-<!--图片-->
+<!--图片--> 
  <view class="image-panel">
    <image class="img" src="/images/travel/login-bg.png"></image>
 </view>
   <!--登录按钮-->
   <view class="btn-panel">
-    <button class="btn" bindtap="login" hover-class="btn-hover" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
+    <button class="btn" hover-class="btn-hover" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
       <image class="wx-icon" src="/images/wx.png"/> 
       <text class="wx-text">微信用户一键登录</text>
       </button>
