--- a/files/pages/messages/messages.wxml
+++ b/files/pages/messages/messages.wxml
@@ -1,5 +1,5 @@
 <!--pages/messages/messages.wxml-->
   <view class="container">
     <image src="../../images/error.png"></image>
-    <view class="no-msg">正在开发中.......</view>
+    <view class="no-msg">正在开发中.....</view>
   </view>
